--- a/infra/cfn/lambda/lambda-vtotal.yaml
+++ b/infra/cfn/lambda/lambda-vtotal.yaml
@@ -44,7 +44,7 @@ Resources:
                           - "secretsmanager:DescribeSecret"
                           - "secretsmanager:ListSecretVersionIds"
                           - "secretsmanager:ListSecrets"
-                          Resource: "arn:aws:secretsmanager:us-west-2:307305615382:secret:vtotalapikey*"
+                          Resource: "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:vtotalapikey*"
                 -   PolicyName: allowSQS
                     PolicyDocument:
                         Version: "2012-10-17"
@@ -57,7 +57,7 @@ Resources:
                           - "logs:CreateLogGroup"
                           - "logs:CreateLogStream"
                           - "logs:PutLogEvents"
-                          Resource: "arn:aws:sqs:us-west-2:307305615382:virus-total-hash-sqs"
+                          Resource: "arn:aws:sqs:${AWS::Region}:${AWS::AccountId}:virus-total-hash-sqs"
     VTotalSQS:
         Type: AWS::SQS::Queue
         Properties:
