--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -3,8 +3,7 @@ on:
   pull_request: {}
   push:
     branches:
-    - main
-    - master
+    - "**"
     paths:
     - .github/workflows/semgrep.yml
   schedule:
@@ -22,3 +21,17 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: semgrep ci
+    # Scan code using project's configuration on https://semgrep.dev/manage
+    - uses: returntocorp/semgrep-action@fcd5ab7459e8d91cb1777481980d1b18b4fc6735
+      with:
+        publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
+        publishDeployment: ${{ secrets.SEMGREP_DEPLOYMENT_ID }}
+        generateSarif: "1"
+
+    # Upload SARIF file generated in previous step
+    - name: Upload SARIF file
+      uses: github/codeql-action/upload-sarif@v2
+      with:
+        sarif_file: semgrep.sarif
+      if: always()
+
