--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -20,11 +20,7 @@ jobs:
       image: returntocorp/semgrep
     steps:
     - uses: actions/checkout@v3
-      with:
-        publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
-        publishDeployment: ${{ secrets.SEMGREP_DEPLOYMENT_ID }}
-        generateSarif: "1"
-    - run: semgrep ci
+    - run: semgrep ci --sarif > semgrep.sarif
 
     # Upload SARIF file generated in previous step
     - name: Upload SARIF file
