--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -10,6 +10,8 @@ on:
   # random HH:MM to avoid a load spike on GitHub Actions at 00:00
   - cron: 33 10 * * *
 name: Semgrep
+permissions: 
+  security-events: write
 jobs:
   semgrep:
     name: semgrep/ci
