--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,5 +1,5 @@
 on:
-  workflow_dispatch: {}
+  #workflow_dispatch: {}
   pull_request: {}
   push:
     branches:
@@ -10,7 +10,7 @@ on:
   # random HH:MM to avoid a load spike on GitHub Actions at 00:00
   - cron: 33 10 * * *
 name: Semgrep
-permissions: 
+permissions:
   security-events: write
 jobs:
   semgrep:
